# kdo

./: HELP.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: lint.yml
backend/: Dockerfile
backend/app/: pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: d4867f3a4c0a_first_revision.py
backend/app/app/: dependencies.py  main.py
backend/app/app/crud/: __init__.py  base.py  crud_gift.py
backend/app/app/models/: __init__.py  gift.py  session.py
backend/app/app/routers/: gifts.py
backend/app/app/schemas/: __init__.py  gift.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/: test_gifts.py
backend/app/app/utils/: config.py
backend/app/scripts/: format-imports.sh  format.sh  lint.sh  test.sh
frontend/: Dockerfile  nginx.conf  nginx.dev.conf  package-lock.json
frontend/src/app/: app-routing.module.ts  app.component.ts  app.module.ts  gift.service.ts  gift.ts
frontend/src/app/gift-details/: gift-details.component.html  gift-details.component.spec.ts  gift-details.component.ts
frontend/src/app/gifts/: gifts-datasource.ts  gifts.component.html  gifts.component.spec.ts  gifts.component.ts
frontend/src/app/nav/: nav.component.html
frontend/src/app/persons/: persons.component.spec.ts  persons.component.ts
proxy/: Dockerfile  nginx.conf
