[tool.poetry]
name = "Gift"
version = "0.1.0"
description = ""
authors = ["Admin <ptitpoulpe@ptitpoulpe.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.16.0"
fastapi = "^0.70.1"
pydantic = "^1.8.2"
gunicorn = "^20.0.4"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.12b0"
isort = "^5.10.1"
autoflake = "^1.3.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"
requests = "^2.23.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

